Endpoint for ballparks

--- a/sport-trip-api.FunctionApp/sport-trip-api.FunctionApp.csproj
+++ b/sport-trip-api.FunctionApp/sport-trip-api.FunctionApp.csproj
@@ -5,7 +5,8 @@
         <RootNamespace>sport_trip_api.FunctionApp</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11"/>
+        <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+        <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
@@ -15,5 +16,8 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <CopyToPublishDirectory>Never</CopyToPublishDirectory>
         </None>
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Repository\Repository.csproj" />
     </ItemGroup>
 </Project>
