--- a/sport-trip-api.FunctionApp/sport-trip-api.FunctionApp.csproj
+++ b/sport-trip-api.FunctionApp/sport-trip-api.FunctionApp.csproj
@@ -18,6 +18,7 @@
         </None>
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\Repository\Repository.csproj" />
     </ItemGroup>
 </Project>
